--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
+    "@angular/http": "^7.2.14",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
@@ -30,6 +31,7 @@
     "mongoose": "^5.5.3",
     "reset-css": "^4.0.1",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
