--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@sweetalert2/ngx-sweetalert2": "^5.0.1",
     "@swimlane/ngx-datatable": "^14.0.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
@@ -33,6 +34,7 @@
     "reset-css": "^4.0.1",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
+    "sweetalert2": "^8.8.7",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
