--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "jquery": "^3.4.0",
     "mongoose": "^5.5.3",
+    "ng-lazyload-image": "^5.1.2",
     "owl.carousel": "^2.3.4",
     "reset-css": "^4.0.1",
     "rxjs": "~6.3.3",
