--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jquery": "^3.4.0",
     "mongoose": "^5.5.3",
