--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.4.0",
     "mongoose": "^5.5.3",
     "ng-lazyload-image": "^5.1.2",
+    "ngx-pagination": "^3.2.1",
     "owl.carousel": "^2.3.4",
     "reset-css": "^4.0.1",
     "rxjs": "~6.3.3",
