--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/reset-css/reset.css",
               "node_modules/sweetalert2/dist/sweetalert2.min.css",
               "node_modules/owl.carousel/dist/assets/owl.theme.default.css",
