--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@sweetalert2/ngx-sweetalert2": "^5.0.1",
     "@swimlane/ngx-datatable": "^14.0.0",
     "body-parser": "^1.18.3",
@@ -30,6 +31,8 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jquery": "^3.4.0",
+    "moment": "^2.24.0",
+    "mongodb-stitch-browser-sdk": "^4.4.1",
     "mongoose": "^5.5.3",
     "ng-lazyload-image": "^5.1.2",
     "ngx-pagination": "^3.2.1",
