--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
+    "@agm/core": "^1.0.0-beta.6",
+    "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
@@ -23,6 +24,8 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
+    "@nebular/eva-icons": "^4.0.0-rc.8",
+    "@nebular/theme": "^4.1.0",
     "@sweetalert2/ngx-sweetalert2": "^5.0.1",
     "@swimlane/ngx-datatable": "^14.0.0",
     "body-parser": "^1.18.3",
@@ -49,9 +52,10 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
+    "@schematics/angular": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
