--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@swimlane/ngx-datatable": "^14.0.0",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "darkmode-js": "^1.3.4",
     "dotenv": "^7.0.0",
@@ -39,6 +40,7 @@
     "mongodb-stitch-browser-sdk": "^4.4.1",
     "mongoose": "^5.5.3",
     "ng-lazyload-image": "^5.1.2",
+    "ng2-charts": "^2.2.3",
     "ngx-pagination": "^3.2.1",
     "owl.carousel": "^2.3.4",
     "reset-css": "^4.0.1",
@@ -54,6 +56,7 @@
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
     "@schematics/angular": "~7.1.0",
+    "@types/chart.js": "^2.7.55",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
