--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jquery": "^3.4.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb-stitch-browser-sdk": "^4.4.1",
     "mongoose": "^5.5.3",
     "ng-lazyload-image": "^5.1.2",
     "ng2-charts": "^2.2.3",
+    "ng4-loading-spinner": "^1.2.3",
     "ngx-pagination": "^3.2.1",
+    "ngx-progressbar": "^2.1.1",
+    "ngx-spinner": "^2.0.0",
     "owl.carousel": "^2.3.4",
     "reset-css": "^4.0.1",
     "rxjs": "~6.3.3",
