--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "darkmode-js": "^1.3.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "jquery": "^3.4.0",
+    "flexcarouseljs": "^0.2.1",
+    "jquery": "^3.4.1",
+    "khuri-common-css": "^1.1.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongodb-stitch-browser-sdk": "^4.4.1",
@@ -43,6 +45,9 @@
     "ng-lazyload-image": "^5.1.2",
     "ng2-charts": "^2.2.3",
     "ng4-loading-spinner": "^1.2.3",
+    "ngx-bootstrap": "^5.1.1",
+    "ngx-ellipsis": "^2.0.5",
+    "ngx-owl-carousel": "^2.0.7",
     "ngx-pagination": "^3.2.1",
     "ngx-progressbar": "^2.1.1",
     "ngx-spinner": "^2.0.0",
@@ -51,6 +56,7 @@
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
     "sweetalert2": "^8.8.7",
+    "swup": "^2.0.5",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
